# naia

adapters/bevy/client/: Cargo.toml
adapters/bevy/server/: Cargo.toml
adapters/bevy/shared/: Cargo.toml
client/: Cargo.toml
client/src/: client.rs
client/src/connection/: io.rs
demos/bevy/client/: Cargo.toml
demos/bevy/client/src/: app.rs  resources.rs
demos/bevy/client/src/systems/: init.rs
demos/bevy/server/: Cargo.toml
demos/bevy/server/src/: main.rs
demos/bevy/shared/: Cargo.toml
demos/bevy/shared/src/: lib.rs  shared.rs
server/: Cargo.toml
server/src/: server.rs
server/src/connection/: io.rs
shared/src/connection/: ack_manager.rs  bandwidth_monitor.rs
socket/client/: Cargo.toml
socket/client/src/: lib.rs
socket/client/src/backends/: mod.rs
socket/client/src/backends/webrtc/: addr_cell.rs  mod.rs  packet_receiver.rs  packet_sender.rs  rtc_socket.rs  socket.rs
socket/server/: Cargo.toml
socket/server/src/: async_socket_full.rs  async_socket_lite.rs  executor.rs  lib.rs  socket.rs
socket/shared/: Cargo.toml
socket/shared/src/: lib.rs  packet_counter.rs  signaling.rs
socket/shared/src/backends/: mod.rs
socket/shared/src/backends/webrtc/: mod.rs  rtc_peer.rs
