[package]
name = "naia-client-socket"
version = "0.13.1"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = "../.."
description = "Abstraction to expose common API over a UDP socket on Linux, and a unreliable WebRTC datachannel on the browser"
documentation = "https://docs.rs/naia-client-socket"
homepage = "https://github.com/naia-rs/naia"
repository = "https://github.com/naia-rs/naia"
keywords = ["wasm", "webrtc", "udp", "networking", "gamedev"]
categories = ["network-programming", "game-development", "wasm", "web-programming"]
license = "MIT OR Apache-2.0"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[features]
webrtc-lite = [ "webrtc-unreliable-client" ]
webrtc-full = [ "webrtc", "naia-socket-shared/webrtc-full", "tinyjson", "bytes", "reqwest" ]
wbindgen = [ "naia-socket-shared/wbindgen", "wasm-bindgen", "js-sys", "web_sys", "tinyjson" ]
mquad = [ "naia-socket-shared/mquad", "miniquad" ]

[dependencies]
naia-socket-shared = { version = "0.10", path = "../shared" }
cfg-if = { version = "1.0" }
log = { version = "0.4" }
wasm-bindgen = { version = "0.2", optional = true  }
js-sys = { version = "0.3", optional = true  }
web_sys = { version = "0.3", package = "web-sys", features = [
    "RtcDataChannel", "RtcDataChannelInit", "RtcDataChannelType", "MessageChannel", "MessagePort",
    "RtcIceCandidate", "RtcIceCandidateInit", "RtcConfiguration", "RtcDataChannelState",
    "RtcPeerConnection", "RtcSdpType",  "RtcSessionDescription", "RtcSessionDescriptionInit",
    "XmlHttpRequest", "XmlHttpRequestEventTarget", "MessageEvent", "ProgressEvent", "ErrorEvent", "Blob" ], optional = true  }
tinyjson = { version = "2.3", optional = true }
miniquad = { version = "0.3", features = ["log-impl"], optional = true }
regex = { version = "1.5" }
anyhow = "1.0"
bytes = { version = "1.1", optional = true }



[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
webrtc-unreliable-client = { git = "https://github.com/SevenO2/webrtc-unreliable-client", version = "0.1.4", optional = true }
webrtc = { version = "0.6.0", optional = true }
reqwest = { version = "0.11", features = ["rustls-tls"], optional = true }
tokio = { version = "1.15", features = ["full"] }
once_cell = { version = "1.4.1" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
