[package]
name = "naia-server-socket"
version = "0.13.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = "../.."
description = "An abstraction to provide a common API over either a UDP socket or a service that can establish WebRTC connections"
documentation = "https://docs.rs/naia-server-socket"
homepage = "https://github.com/naia-rs/naia"
repository = "https://github.com/naia-rs/naia"
keywords = ["webrtc", "udp", "server", "gamedev", "networking"]
categories = ["network-programming", "game-development", "wasm", "web-programming"]
license = "MIT OR Apache-2.0"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[features]
webrtc-lite = [ "webrtc-unreliable" ]
webrtc-full = [ "webrtc", "naia-socket-shared/webrtc-full", "bytes", "async-compat" ]

[dependencies]
anyhow = { version = "1.0.68" }
cfg-if = { version = "1.0" }
naia-socket-shared = { version = "0.10", path = "../shared" }
log = { version = "0.4" }
thiserror = { version = "1.0.38" }
futures-channel = { version = "0.3", features = ["sink"] }
futures-core = { version = "0.3" }
futures-util = { version = "0.3", features = ["sink"] }
async-io = { version = "1.12.0" }
smol = { version = "1.2.4" }
once_cell = { version = "1.4.1" }
concurrent-queue = { version = "2.1.0" }
webrtc-unreliable = { version = "0.5.2", optional = true }
webrtc = { git = "https://github.com/zduny/webrtc", rev = "8a9138c", optional = true } # version = "0.6.0"
bytes = { version = "1.2.1", optional = true }
# hashbrown = { version = "0.12.3", optional = true }
async-compat = { version = "0.2.1", optional = true }
async-dup = { version = "1.2.2" }
http = { version = "0.2" }
signal-hook = { version = "0.3.14" }
signal-hook-registry = { version = "1.4.0" }
