[package]
name = "naia-socket-shared"
version = "0.10.1"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = "../.."
description = "Common data types shared between naia-server-socket & naia-client-socket crates"
documentation = "https://docs.rs/naia-socket-shared"
homepage = "https://github.com/naia-rs/naia"
repository = "https://github.com/naia-rs/naia"
keywords = ["webrtc", "udp", "server", "gamedev", "networking"]
categories = ["network-programming", "game-development", "wasm", "web-programming"]
license = "MIT OR Apache-2.0"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[features]
webrtc-full = [ "webrtc", "serde_json", "base64"] # "bytes", "reqwest"
wbindgen = [ "wasm-bindgen", "js-sys" ]
mquad = [ ]

[dependencies]
cfg-if = { version = "1.0" }
log = { version = "0.4" }
url = { version = "2.2.2" }
async-channel = { version = "1.8.0" }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow = { version = "1.0.68", features = ["backtrace"] }
rand = { version = "0.8" }
# tokio = { version = "1.15", features = ["full"] }
serde_json = { version = "1.0.91", optional = true }
webrtc = { version = "0.6.0", optional = true }
base64 = { version = "0.13.1", optional = true }
