[package]
name = "naia-bevy-client"
version = "0.14.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = "../../.."
description = "Library to faciliate naia_client & Bevy interop"
homepage = "https://github.com/naia-rs/naia"
repository = "https://github.com/naia-rs/naia"
license = "MIT OR Apache-2.0"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[features]
wbindgen = [ "naia-client/wbindgen" ]
webrtc-lite = [ "naia-client/webrtc-lite" ]
webrtc-full = [ "naia-client/webrtc-full" ]

[dependencies]
naia-client = { version = "0.14", path = "../../../client", features = ["bevy_support"] }
naia-bevy-shared = { version = "0.14", path = "../shared" }
bevy_app = { version = "0.9", default-features=false }
bevy_ecs = { version = "0.9", default-features=false }
